--- a/dashboards/calculator.erb
+++ b/dashboards/calculator.erb
@@ -9,8 +9,10 @@
       <div data-view="Clock"></div>
       <i class="icon-time icon-background"></i>
     </li>
-    <li data-row="2" data-col="1" data-sizex="3" data-sizey="1">
-      <div id="my-chart" class="ct-chart ct-perfect-fourth" style="background: white;width: 100%;"></div>
+    <li data-row="1" data-col="1" data-sizex="3" data-sizey="1">
+      <h6 style="text-align: center;">Runner Watcher Widget for KILLEARN / FSDP F&M CLASS 1 HANDICAP</h6>
+      <div id="my-chart" class="ct-chart ct-perfect-fourth" style="background: white;width: 918px !important; height: 400px !important;"></div>
     </li>
   </ul>
 </div>
+
