--- a/dashboards/calculator.erb
+++ b/dashboards/calculator.erb
@@ -9,9 +9,20 @@
       <div data-view="Clock"></div>
       <i class="icon-time icon-background"></i>
     </li>
-    <li data-row="1" data-col="1" data-sizex="3" data-sizey="1">
+    <li data-row="4" data-col="1" data-sizex="3" data-sizey="1">
       <h6 style="text-align: center;">Runner Watcher Widget for KILLEARN / FSDP F&M CLASS 1 HANDICAP</h6>
       <div id="my-chart" class="ct-chart ct-perfect-fourth" style="background: white;width: 918px !important; height: 400px !important;"></div>
+    </li>
+    <li data-row="2" data-col="1" data-sizex="2" data-sizey="1"
+      <div data-view="Iframe" data-url="https://www.youtube.com/embed/SftPJmYrjhY">
+    </li>
+    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
+      <div data-id="feed"
+        data-view="List"
+        data-unordered="true"
+        data-unlabelled="true"
+        data-moreinfo="Only show the latest 3 messages"></div>
+        <i class="icon-info-sign icon-background"></i>
     </li>
   </ul>
 </div>
