--- a/dashboards/calculator.erb
+++ b/dashboards/calculator.erb
@@ -21,6 +21,7 @@
         data-view="List"
         data-unordered="true"
         data-unlabelled="true"
+        data-title="Info Feed"
         data-moreinfo="Only show the latest 3 messages"></div>
         <i class="icon-info-sign icon-background"></i>
     </li>
