--- a/widgets/list/list.scss
+++ b/widgets/list/list.scss
@@ -58,11 +58,11 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   }
 
   .unlabelled-list {
-    .label { display: none; }
     .value {
       float: none;
       margin: 0;
     }
+    font-size: 16px;
     color: $value-color;
     margin: 0;
     list-style: disc inside;
