--- a/dashboards/layout.erb
+++ b/dashboards/layout.erb
@@ -10,10 +10,13 @@
 
   <!-- The javascript and css are managed by sprockets. The files can be found in the /assets folder-->
   <script type="text/javascript" src="/assets/application.js"></script>
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <script type="text/javascript">
+      google.load("visualization", "1", {packages:["corechart"]});
+  </script>
   <link rel="stylesheet" href="/assets/application.css">
   <link rel="stylesheet" href="/assets/chartist/chartist.min.css">
   <link rel="stylesheet" href="/assets/tooltip.css">
-
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
   <link rel="icon" href="/assets/favicon.ico">
 
