Replace logo with account widget

--- a/dashboards/calculator.erb
+++ b/dashboards/calculator.erb
@@ -2,7 +2,7 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-view="Image" data-image="/logo.png" style="background: white;"></div>
+      <div data-view="Account"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
