Add sub titles for charts

--- a/dashboards/calculator.erb
+++ b/dashboards/calculator.erb
@@ -14,7 +14,7 @@
       <div data-view="Iframe" data-url="https://www.youtube.com/embed/SftPJmYrjhY"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="jackpotchart" data-view="GoogleColumn"  data-title="Jackpot"></div>
+      <div data-id="jackpotchart" data-view="GoogleColumn"  data-title="Pool Sizes"></div>
     </li>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
       <div data-id="runnerWatcherChart" data-view="GoogleLine"  data-title="Runner Watcher"></div>
