Add speed map snapshot

--- a/dashboards/calculator.erb
+++ b/dashboards/calculator.erb
@@ -4,7 +4,9 @@
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-view="Account"></div>
     </li>
-
+    <li data-row="1" data-col="3" data-sizex="2" data-sizey="2">
+      <div data-view="Image" data-image="/speed-map.png"></div>
+    </li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-view="Clock"></div>
       <i class="icon-time icon-background"></i>
